--- a/src/main/webapp/material/List.xhtml
+++ b/src/main/webapp/material/List.xhtml
@@ -16,62 +16,81 @@
 
         <ui:define name="body">
             <h:form id="MaterialListForm">
-                <p:panel header="#{bundle.ListMaterialTitle}">
-                    <p:dataTable id="datalist" value="#{materialController.items}" var="item"
-                                 selectionMode="single" selection="#{materialController.selected}"
-                                 paginator="true"
-                                 rowKey="#{item.materialid}"
-                                 rows="10"
-                                 rowsPerPageTemplate="10,20,30,40,50"
-                                 >
+                <p:dataTable id="datalist" value="#{materialController.items}" var="item"
+                             selectionMode="single" selection="#{materialController.selected}"
+                             paginator="true"
+                             rowKey="#{item.materialid}"
+                             rows="10"
+                             rowsPerPageTemplate="10,20,30,40,50"
+                             >
 
-                        <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
-                        <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
+                    <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
+                    <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
 
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListMaterialTitle_materialid}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.materialid}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListMaterialTitle_mass}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.mass}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListMaterialTitle_materialquality}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.materialquality}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListMaterialTitle_materialquantity}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.materialquantity}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListMaterialTitle_materialtype}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.materialtype}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListMaterialTitle_rentprice}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.rentprice}"/>
-                        </p:column>
-                        <f:facet name="footer">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{materialController.prepareCreate}" update=":MaterialCreateForm" oncomplete="PF('MaterialCreateDialog').show()"/>
-                            <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":MaterialViewForm" oncomplete="PF('MaterialViewDialog').show()" disabled="#{empty materialController.selected}"/>
-                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":MaterialEditForm" oncomplete="PF('MaterialEditDialog').show()" disabled="#{empty materialController.selected}"/>
-                            <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{materialController.destroy}" update=":growl,datalist" disabled="#{empty materialController.selected}"/>
+                    <p:column>
+                        <f:facet name="header">
+                            <h:outputText value="#{bundle.ListMaterialTitle_materialid}"/>
                         </f:facet>
-                    </p:dataTable>
-                </p:panel>
+                        <h:outputText value="#{item.materialid}"/>
+                    </p:column>
+                    <p:column>
+                        <f:facet name="header">
+                            <h:outputText value="#{bundle.ListMaterialTitle_mass}"/>
+                        </f:facet>
+                        <h:outputText value="#{item.mass}"/>
+                    </p:column>
+                    <p:column>
+                        <f:facet name="header">
+                            <h:outputText value="#{bundle.ListMaterialTitle_materialquality}"/>
+                        </f:facet>
+                        <h:outputText value="#{item.materialquality}"/>
+                    </p:column>
+                    <p:column>
+                        <f:facet name="header">
+                            <h:outputText value="#{bundle.ListMaterialTitle_materialquantity}"/>
+                        </f:facet>
+                        <h:outputText value="#{item.materialquantity}"/>
+                    </p:column>
+                    <p:column>
+                        <f:facet name="header">
+                            <h:outputText value="#{bundle.ListMaterialTitle_materialtype}"/>
+                        </f:facet>
+                        <h:outputText value="#{item.materialtype}"/>
+                    </p:column>
+                    <p:column>
+                        <f:facet name="header">
+                            <h:outputText value="#{bundle.ListMaterialTitle_rentprice}"/>
+                        </f:facet>
+                        <h:outputText value="#{item.rentprice}"/>
+                    </p:column>
+                    <f:facet name="footer">
+                        <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{materialController.prepareCreate}" update=":MaterialCreateForm" oncomplete="PF('MaterialCreateDialog').show()"/>
+                        <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":MaterialViewForm" oncomplete="PF('MaterialViewDialog').show()" disabled="#{empty materialController.selected}"/>
+                        <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":MaterialEditForm" oncomplete="PF('MaterialEditDialog').show()" disabled="#{empty materialController.selected}"/>
+                        <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{materialController.destroy}" update=":growl,datalist" disabled="#{empty materialController.selected}"/>
+                    </f:facet>
+                </p:dataTable>
+                <br /><br />
+                <h:commandLink>
+                    <p:graphicImage name="img/excel.png" />
+                    <p:dataExporter type="xls" target="datalist" fileName="#{bundle.ListMaterialTitle}" pageOnly="true"/>
+                </h:commandLink>
+
+                <h:commandLink>
+                    <p:graphicImage name="img/pdf.png" />
+                    <p:dataExporter type="pdf" target="datalist" fileName="#{bundle.ListMaterialTitle}" pageOnly="true" />
+                </h:commandLink>
+
+                <h:commandLink>
+                    <p:graphicImage name="img/csv.png" />
+                    <p:dataExporter type="csv" target="datalist" fileName="#{bundle.ListMaterialTitle}" pageOnly="true" />
+                </h:commandLink>
+
+                <h:commandLink>
+                    <p:graphicImage name="img/xml.png" />
+                    <p:dataExporter type="xml" target="datalist" fileName="#{bundle.ListMaterialTitle}" pageOnly="true" />
+                </h:commandLink>
+
             </h:form>
 
             <ui:include src="Create.xhtml"/>
