Fixed no user or password entered NoResultException with description.

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -24,7 +24,7 @@
 					<div class="col-md-6">
 						<div class="input-group">
 							<span class="input-group-addon">Username:</span>
-							<h:inputText label="Login" p:placeholder="" p:id="username"
+							<h:inputText label="Username" p:placeholder="" p:id="username"
 										 value="${login.dto.name}" class="form-control"
                                                                                  required="true" autocomplete="false">
 							</h:inputText>
@@ -33,7 +33,7 @@
 					<div class="col-md-6">
 						<div class="input-group">
 							<span class="input-group-addon">Password:</span>
-							<h:inputSecret label="Login" p:placeholder=""
+							<h:inputSecret label="Password" p:placeholder="" p:id="password"
 										   value="${login.dto.password}" class="form-control"
 										   required="true">
 							</h:inputSecret>
